# ocaml-hwloc

./: dune-project  hwloc.opam
src/c/: dune
